<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_subheader_1"
        android:title="@string/navigation_subheader_1">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_1"
                android:title="@string/navigation_sub_item_1"/>
            <item
                android:id="@+id/navigation_sub_item_2"
                android:title="@string/navigation_sub_item_2"/>
        </menu>
    </item>

    <item
        android:id="@+id/navigation_subheader_2"
        android:title="@string/navigation_subheader_2">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_3"
                android:title="@string/navigation_sub_item_3"/>
            <item
                android:id="@+id/navigation_sub_item_4"
                android:title="@string/navigation_sub_item_4"/>
        </menu>
    </item>
</menu>